# AppLauncher

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  projectCreator.bat  projectCreator.sh
src/: Repositories.h  main.cpp
src/AppLauncher/Domain/: BackupFolder.cpp  BackupFolder.h  Executable.cpp  Executable.h  FileToBackup.cpp  FileToBackup.h  FileToRestore.cpp  FileToRestore.h
src/AppLauncher/Exceptions/: BackupFolderExceptions.cpp  BackupFolderExceptions.h  FileToBackupExceptions.cpp  FileToBackupExceptions.h  FileToRestoreException.cpp  FileToRestoreException.h
src/AppLauncher/Factories/: BackupFolderRepositoryFactory.cpp  BackupFolderRepositoryFactory.h  ExecutableRepositoryFactory.cpp  ExecutableRepositoryFactory.h  FileToBackupRepositoryFactory.cpp  FileToBackupRepositoryFactory.h  FileToRestoreRepositoryFactory.cpp  FileToRestoreRepositoryFactory.h
src/AppLauncher/Operations/: BackupOperation.cpp  BackupOperation.h  ExecuteOperation.cpp  ExecuteOperation.h  IOperation.h  RestoreOperation.cpp  RestoreOperation.h
src/AppLauncher/Repositories/: BackupFolderRepository.cpp  BackupFolderRepository.h  ExecutableRepository.cpp  ExecutableRepository.h  FileToBackupRepository.cpp  FileToBackupRepository.h  FileToRestoreRepository.cpp  FileToRestoreRepository.h
src/Business/: ExecutableLauncher.cpp  ExecutableLauncher.h
src/Business/ExecutableLaunchers/: ExecutableLauncherFactory.cpp  ExecutableLauncherUnix.cpp  ExecutableLauncherUnix.h
src/Common/: main.cpp
src/Common/Application/Parameters/: ApplicationParameters.cpp  ApplicationParameters.h  ApplicationParametersBuilder.cpp  ApplicationParametersBuilder.h  ApplicationParametersManager.cpp  ApplicationParametersManager.h  ApplicationParametersReader.cpp  ApplicationParametersReader.h
src/Common/Business/ExecutableLaunchers/: ExecutableLauncher.cpp  ExecutableLauncher.h  ExecutableLauncherFactory.cpp  ExecutableLauncherFactory.h  IExecutableLauncherSpec.h
src/Common/Domain/FileSystem/: Executable.cpp  Executable.h  Path.cpp  Path.h
src/Common/FileSystem/: FileSystem.cpp  FileSystem.h
src/Common/FileSystem/Entities/: Executable.cpp  Executable.h  IPathValidator.h  Path.cpp  Path.h
src/Common/FileSystem/Factories/: EntityFactory.h  FileSystemFactory.h
src/Common/FileSystem/Operations/: IExecutableLauncher.h  IFileInformationReader.h  IPathInformationReader.h
src/Common/System/Entities/: Executable.cpp  Executable.h  Path.cpp  Path.h
src/Common/System/Operations/: IExecutableLauncher.h
src/Common/UserParameter/DataAccess/: IUserParameterDAO.h  JSONUserParameterDAO.cpp  JSONUserParameterDAO.h  UserParameterDTO.cpp  UserParameterDTO.h
src/Common/UserParameter/Domain/: UserParameter.cpp  UserParameter.h  UserParameterFile.cpp  UserParameterFile.h
src/Common/UserParameter/Factories/: UserParameterFactory.cpp  UserParameterFactory.h
src/Common/UserParameter/Repositories/: UserParameterRepository.cpp  UserParameterRepository.h
src/Common/Utils/: StringUtils.cpp  StringUtils.h
src/Core/: DataObject.h
src/Core/Application/: CommandLine.cpp  CommandLine.h
src/Core/Exceptions/: Exception.cpp  Exception.h
src/Core/JSON/: IDataObjectJSONBuilder.h  JSONParser.cpp  JSONParser.h  RootDataObjectJSONBuilder.cpp  RootDataObjectJSONBuilder.h
src/Core/JSON/DataObjectBuilder/: ArrayDataObjectBuilder.cpp  ArrayDataObjectBuilder.h  ArrayDataObjectJSONBuilder.cpp  ArrayDataObjectJSONBuilder.h  IDataObjectJSONBuilder.h  MapDataObjectBuilder.cpp  MapDataObjectBuilder.h  MapDataObjectJSONBuilder.cpp  MapDataObjectJSONBuilder.h  RootDataObjectJSONBuilder.cpp  RootDataObjectJSONBuilder.h  StringDataObjectJSONBuilder.cpp  StringDataObjectJSONBuilder.h
src/Core/JSON/Parser/: JSONParser.cpp  JSONParser.h
src/Core/Parsers/: JSONParser.cpp  JSONParser.h
src/FileSystem/: Path.cpp  Path.h
src/FileSystem/Exceptions/: CopyOperationExceptions.cpp  CopyOperationExceptions.h
src/FileSystem/Factories/: PathFactory.cpp  PathFactory.h
src/FileSystem/Operations/: CopyOperation.cpp  CopyOperation.h  ExecuteOperation.h  ExecuteOperationUnix.cpp  ExecuteOperationWindows.cpp  ReadInformationOperation.cpp  ReadInformationOperation.h  ReadInformationOperationUnix.cpp  ReadInformationOperationWindows.cpp
src/Model/File/: Executable.cpp  Executable.h  File.cpp  File.h
src/Model/FileSystem/File/: Executable.cpp  Executable.h  File.h
src/Model/FileSystem/Path/: FilePath.cpp  FilePath.h  FolderPath.h
src/Model/Path/: FilePath.cpp  FilePath.h  FolderPath.cpp  FolderPath.h  IPath.h
src/Settings/Builders/: CommandLineSettingsBuilder.cpp  CommandLineSettingsBuilder.h  CustomFileSettingsBuilder.cpp  CustomFileSettingsBuilder.h  MergedSettingsBuilder.cpp  MergedSettingsBuilder.h
src/Settings/DataAccess/: CommandLineArgumentSettingsDAO.h  ConcreteCommandLineArgumentSettingsDAO.cpp  ConcreteCommandLineArgumentSettingsDAO.h  ConcreteCustomFileSettingsDAO.cpp  ConcreteCustomFileSettingsDAO.h  CustomFileSettingsDAO.h  CustomSettingsDAO.h
src/Settings/Domain/: CommandLineSettings.cpp  CommandLineSettings.h  CustomFileSettings.cpp  CustomFileSettings.h  FileToBackup.cpp  FileToBackup.h  Settings.cpp  Settings.h
src/Settings/Exceptions/: BadFormatCustomFileSettingsException.cpp  BadFormatCustomFileSettingsException.h  BadTypeCustomFileSettingsException.cpp  BadTypeCustomFileSettingsException.h  CustomFileSettingsExceptions.cpp  CustomFileSettingsExceptions.h  MissingSettingsException.cpp  MissingSettingsException.h
src/Settings/Factories/: ConcreteSettingsDAOFactory.cpp  ConcreteSettingsDAOFactory.h  SettingsDAOFactory.h  SettingsRepositoryFactory.cpp  SettingsRepositoryFactory.h
src/Settings/Repositories/: ConcreteSettingsRepository.cpp  ConcreteSettingsRepository.h  SettingsRepository.h
src/Unix/Business/ExecutableLaunchers/: ExecutableLauncherUnix.h
src/Unix/FileSystem/Entities/: UnixExecutablePathValidator.h
src/Unix/FileSystem/Factories/: EntityFactoryUnix.cpp  FileSystemFactoryUnix.cpp
src/Unix/FileSystem/Operations/: ExecutableLauncherUnix.cpp  ExecutableLauncherUnix.h  (+2 more)
(+27 files in other folders)
